# standground

./: .gitignore  Cargo.toml  Info.plist  README.md
.github/workflows/: prepare-release.yml  release.yml  tag-release.yml
assets/: icon.icns
scripts/: bundle.sh  export-cert.sh  setup-cert.sh
src/: app.rs  config.rs  display.rs  layout.rs  lib.rs  main.rs  storage.rs  update.rs  window.rs
