[package]
name = "standground"
version = "0.1.0"
edition = "2021"
description = "macOS menu bar app that saves and restores window positions per monitor configuration"

[dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
