[package]
name = "standground"
version = "0.1.1"
edition = "2021"
description = "macOS menu bar app that saves and restores window positions per monitor configuration"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSTimer", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSMenu", "NSMenuItem", "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSImage", "NSButton", "NSControl", "NSResponder", "NSView"] }
core-graphics = "0.25"
core-foundation = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "3", features = ["json"] }
